--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,43 @@
+# Advent of Code inputs (unique per user)
+**/input.txt
+
+# Environment files containing session tokens
+.env
+.env.local
+
+# Go specific
+**/go.sum
+
+# Python specific
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE specific
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS specific
 .DS_Store
+Thumbs.db
